<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.perplexhub</groupId>
	<artifactId>rsql</artifactId>
	<version>5.0.28-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>io.github.perplexhub - RSQL</name>
	<inceptionYear>2018</inceptionYear>
	<description>Java library translate RSQL into Spring Data JPA Specification and QueryDSL Predicate.</description>
	<url>https://github.com/perplexhub/rsql-jpa-specification</url>
	<licenses>
		<license>
			<name>MIT</name>
			<url>http://opensource.org/licenses/MIT</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>perplexhub</name>
		</developer>
	</developers>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-boot.version>3.0.0</spring-boot.version>
		<spring-data-releasetrain.version>2022.0.0</spring-data-releasetrain.version>
		<querydsl.version>4.1.4</querydsl.version>
		<rsql-parser.version>2.1.0</rsql-parser.version>
		<lombok.version>1.18.24</lombok.version>
		<hamcrest.version>2.2</hamcrest.version>
		<h2.version>2.1.214</h2.version>
	</properties>
	<modules>
		<module>rsql-common</module>
		<module>rsql-jpa</module>
		<module>rsql-querydsl</module>
		<module>rsql-jpa-spring-boot-starter</module>
		<module>rsql-querydsl-spring-boot-starter</module>
		<module>rsql-support</module>
	</modules>
	<scm>
		<url>https://github.com/perplexhub/rsql-jpa-specification</url>
		<connection>scm:git:https://github.com/perplexhub/rsql-jpa-specification.git</connection>
		<developerConnection>scm:git:https://github.com/perplexhub/rsql-jpa-specification.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>cz.jirutka.rsql</groupId>
				<artifactId>rsql-parser</artifactId>
				<version>${rsql-parser.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.data</groupId>
				<artifactId>spring-data-bom</artifactId>
				<version>${spring-data-releasetrain.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.h2database</groupId>
				<artifactId>h2</artifactId>
				<version>${h2.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.hamcrest</groupId>
				<artifactId>hamcrest</artifactId>
				<version>${hamcrest.version}</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
					<stagingProgressTimeoutMinutes>60</stagingProgressTimeoutMinutes>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<executions>
					<execution>
						<id>default-compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<source>${java.version}</source>
							<target>${java.version}</target>
						</configuration>
					</execution>
					<execution>
						<id>default-testCompile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<source>${java.version}</source>
							<target>${java.version}</target>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<configuration>
					<useSystemClassLoader>false</useSystemClassLoader>
					<environmentVariables>
						<LOG_PATH>${project.build.directory}/logs</LOG_PATH>
					</environmentVariables>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<!-- Deployment profile (required so these plugins are only used when deploying) -->
		<profile>
			<id>deploy</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<version>3.0.0-M3</version>
						<executions>
							<execution>
								<id>enforce-no-releases</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireSnapshotVersion>
											<message>No Releases Allowed!</message>
										</requireSnapshotVersion>
									</rules>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.4</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<!-- Prevent `gpg` from using pinentry programs -->
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<configuration>
							<tagNameFormat>@{project.artifactId}-@{project.version}</tagNameFormat>
							<preparationGoals>clean install</preparationGoals>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<pushChanges>true</pushChanges>
							<useReleaseProfile>true</useReleaseProfile>
							<releaseProfiles>release</releaseProfiles>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<goals>deploy</goals>
							<checkModificationExcludes>
								<checkModificationExclude>pom.xml</checkModificationExclude>
								<checkModificationExclude>.gitignore</checkModificationExclude>
							</checkModificationExcludes>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>2.4</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
								<configuration>
									<!-- Prevent `gpg` from using pinentry programs -->
									<gpgArguments>
										<arg>--pinentry-mode</arg>
										<arg>loopback</arg>
									</gpgArguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
</project>
